# mcp_massive

./: Dockerfile  pyproject.toml
src/mcp_massive/: api.py  server.py
