[project]
name = "mcp_massive"
version = "0.7.0"
description = "MCP server and REST API for Massive.com financial data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.15.0",
    "massive>=2.0.1",
    "python-dotenv>=1.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
]
[[project.authors]]
name = "Massive"
email = "support@massive.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "pytest>=8.4.0",
    "rust-just>=1.42.4",
]

[project.scripts]
mcp_massive = "mcp_massive:main"
mcp_massive_api = "mcp_massive.api:run_api"
